--- a/settings.gradle
+++ b/settings.gradle
@@ -35,6 +35,7 @@ include ':android-module-json'
 include ':android-module-mvc'
 include ':android-module-network'
 include ':android-module-navigation'
+include ':android-module-preference'
 include ':android-module-preferenceview'
 include ':android-module-location'
 include ':android-module-livedata'
